--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Backend API for Customer, Inventory & Delivery Management System",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -26,38 +27,39 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "sequelize": "^6.32.1",
-    "mysql2": "^3.5.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
     "compression": "^1.7.4",
-    "multer": "^1.4.5-lts.1",
-    "qrcode": "^1.5.3",
-    "nodemailer": "^6.9.3",
-    "joi": "^17.9.2",
-    "express-validator": "^7.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.8.1",
-    "winston": "^3.10.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.5.2",
+    "nodemailer": "^6.9.3",
+    "pg": "^8.16.3",
+    "qrcode": "^1.5.3",
+    "sequelize": "^6.32.1",
     "sharp": "^0.32.1",
     "uuid": "^9.0.0",
-    "moment": "^2.29.4",
-    "express-async-errors": "^3.1.1"
+    "winston": "^3.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.1",
-    "supertest": "^6.3.3",
     "eslint": "^8.44.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "sequelize-cli": "^6.6.1"
+    "jest": "^29.6.1",
+    "nodemon": "^3.0.1",
+    "sequelize-cli": "^6.6.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=14.0.0"
