--- a/cidms-frontend/package.json
+++ b/cidms-frontend/package.json
@@ -16,15 +16,18 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
     "luxon": "^3.7.1",
     "notistack": "^3.0.2",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "zod": "^4.0.17"
   },
