--- a/cidms-frontend/package.json
+++ b/cidms-frontend/package.json
@@ -14,14 +14,17 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@zxing/browser": "^0.1.5",
     "axios": "^1.11.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "luxon": "^3.7.1",
     "notistack": "^3.0.2",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
