--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,17 +7,17 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "react-router-dom": "^6.26.1",
-    "bootstrap": "^5.3.3",
-    "react-bootstrap": "^2.10.4",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
-    "react-qr-code": "^2.0.15"
+    "react": "^19.1.1",
+    "react-bootstrap": "^2.10.4",
+    "react-dom": "^19.1.1",
+    "react-qr-code": "^2.0.15",
+    "react-router-dom": "^6.30.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
