--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 # .env example file
-DB_URI=mongodb://localhost:27017/business_management
+DB_URI=mongodb+srv://binujanawod1217:hRXiSJlTC6JcbCEr@order.bqwo37m.mongodb.net/?retryWrites=true&w=majority&appName=order
 PORT=5000
 JWT_SECRET=your_jwt_secret
