--- a/frontend/.env
+++ b/frontend/.env
@@ -3,5 +3,11 @@ REACT_APP_API_URL=http://localhost:5000/api
 REACT_APP_APP_NAME=Order Management System
 REACT_APP_VERSION=1.0.0
 
+# Google Drive API Configuration
+# You need to set up a Google Cloud Project and enable Drive API
+# Get these credentials from Google Cloud Console
+REACT_APP_GOOGLE_API_KEY=AIzaSyBsKt_Xl8BOnSeM4wmZqsyh2p7OEqnqiNA
+REACT_APP_GOOGLE_CLIENT_ID=275904203632-qnvhd6qtp1nvoqt3v9hvnirbv0ueoqgt.apps.googleusercontent.com
+
 # Optional: For production
 # REACT_APP_API_URL=https://your-api-domain.com/api
